Finished most model classes